; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DrawSound.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DrawSound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [7 x i8] c"M_SVOL\00", align 1
@PU_CACHE = common dso_local global i32 0, align 4
@SoundDef = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@LINEHEIGHT = common dso_local global i32 0, align 4
@sfx_vol = common dso_local global i32 0, align 4
@snd_SfxVolume = common dso_local global i32 0, align 4
@music_vol = common dso_local global i32 0, align 4
@snd_MusicVolume = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_DrawSound() #0 {
  %1 = load i32, i32* @PU_CACHE, align 4
  %2 = call i32 @W_CacheLumpName(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %1)
  %3 = call i32 @V_DrawPatchDirect(i32 60, i32 38, i32 0, i32 %2)
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SoundDef, i32 0, i32 1), align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SoundDef, i32 0, i32 0), align 8
  %6 = load i32, i32* @LINEHEIGHT, align 4
  %7 = load i32, i32* @sfx_vol, align 4
  %8 = add nsw i32 %7, 1
  %9 = mul nsw i32 %6, %8
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %5, %10
  %12 = load i32, i32* @snd_SfxVolume, align 4
  %13 = call i32 @M_DrawThermo(i32 %4, i64 %11, i32 16, i32 %12)
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SoundDef, i32 0, i32 1), align 8
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @SoundDef, i32 0, i32 0), align 8
  %16 = load i32, i32* @LINEHEIGHT, align 4
  %17 = load i32, i32* @music_vol, align 4
  %18 = add nsw i32 %17, 1
  %19 = mul nsw i32 %16, %18
  %20 = sext i32 %19 to i64
  %21 = add nsw i64 %15, %20
  %22 = load i32, i32* @snd_MusicVolume, align 4
  %23 = call i32 @M_DrawThermo(i32 %14, i64 %21, i32 16, i32 %22)
  ret void
}

declare dso_local i32 @V_DrawPatchDirect(i32, i32, i32, i32) #1

declare dso_local i32 @W_CacheLumpName(i8*, i32) #1

declare dso_local i32 @M_DrawThermo(i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
